--- a/imports/style.css
+++ b/imports/style.css
@@ -1,3 +1,6 @@
+/**
+*Este archivo que hace aca ?? no es comun en los ejemplos
+*/
 .futbolYa{
     background: url("img/futbolfondo.jpeg") no-repeat top center fixed;
     background-size: cover;
